[package]
name = "explo-der"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
copypasta = "0.8.2"
glium = { version = "0.32.1", default-features = true }
imgui = { version = "0.11.0", features = ["tables-api"] }
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
lazy_static = "1.4.0"
